#2645-query-versions: 3718: fix warnings